--- a/3.spring/spring_study/exam07/src/main/webapp/WEB-INF/templates/member/join.html
+++ b/3.spring/spring_study/exam07/src/main/webapp/WEB-INF/templates/member/join.html
@@ -1,1 +1,9 @@
-<h1>회원가입</h1>
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf/org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layouts/common}">
+
+<main layout:fragment="content">
+    <h1>회원가입</h1>
+</main>
+</html>
